--- a/index.html
+++ b/index.html
@@ -1,87 +1,121 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan,
+on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on
+http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Direction.js</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Direction.js</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/alaa13212/direction.js/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/alaa13212/direction.js/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/alaa13212/direction.js" class="code">View Direction.js on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/alaa13212" class="avatar"><img src="https://secure.gravatar.com/avatar/80ba9785a5b84d945b01b96509cdf51f?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/alaa13212">alaa13212</a> maintains <a href="https://github.com/alaa13212/direction.js">Direction.js</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/alaa13212/direction.js/tarball/master" class="tar">tar</a><a href="https://github.com/alaa13212/direction.js/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+		<link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="javascripts/script.js"></script>
+		<title>Direction.js</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+	</head>
+	<body dir="rtl">
+		<div class="wrapper">
+			<header>
+				<h1 class="title">Direction.js</h1>
+			</header>
+			<div id="container">
+				<p class="tagline"></p>
+				<div id="main" role="main">
+					<div class="download-bar">
+						<div class="inner">
+							<a href="https://github.com/alaa13212/direction.js/tarball/master" class="download-button tar"><span>تحميل</span></a>
+							<a href="https://github.com/alaa13212/direction.js/zipball/master" class="download-button zip"><span>تحميل</span></a>
+							<a href="https://github.com/alaa13212/direction.js" class="code">شاهد Direction.js في GitHub</a>
+						</div>
+						<span class="blc"></span><span class="trc"></span>
+					</div>
+					<article class="markdown-body">
+						<h3>مرحبا في DIrection.js</h3>
+						<p>
+							مشروع Direction.js هو مشروع عربي مفتوح المصدر مقصده إصلاح أخطاء كتابة الكلمات العربية والإنجليزية معا في تفس الوقت.
+						</p>
+						<h3>الإصدار</h3>
+						<p>
+							هذه نسخة <strong>تجريبية</strong> وقد يكون بها الكثير من الأخطاء، يمكنك الإبلاغ عنها من <a href="https://github.com/alaa13212/direction.js/issues">هنا</a> أو مباشرة من البريد الإلكتروني <a href="mailto:alaa13212?subject=إبلاغ عن مشكلة">alaa13212@gmail.com</a>.
+						</p>
+						<h3>سجل التغير</h3>
+						<h4>الأصدار الأولي التجريبي</h4>
+						<ul>
+							<li>
+								إصلاح الرموز الموجودة بين نصين أحدهما يميني و الآخر يساري
+							</li>
+							<li>
+								لاينصح بإستخدامه في وسوم HTML بداخلها وسوم HTML أخرى
+							</li>
+						</ul>
+						<h3>الرخصة</h3>
+						<p>
+							يحق لأي شخص نسخ وأستخدام وتعديل هذا الملف بشرط أن لا يستخدمه في ما يضر الآخرين
+						</p>
+						<h3>أمثلة</h3>
+						<p>
+							هذه مجموعة أمثلة لإستخدام الملف مع العلم أن الإتجاه الإفتراضي للصفحة هو من اليمين لليسار
+						</p>
+						<table>
+							<thead>
+								<tr>
+									<th>قبل</th>
+									<th>بعد</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>لغة C++ مبنية على C.</td>
+									<td class="dir">لغة C++ مبنية على C.</td>
+								</tr>
+								<tr>
+									<td>لغة تنسيق الويب هي (CSS) Cascoding Style Sheet.</td>
+									<td class="dir">لغة تنسيق الويب هي (CSS) Cascoding Style Sheet.</td>
+								</tr>
+								<tr>
+									<td>لغة Hyper Text Markup Language (HTML) لستخدم لهيكلة صفحات الويب</td>
+									<td class="dir">لغة Hyper Text Markup Language (HTML) لستخدم لهيكلة صفحات الويب</td>
+								</tr>
+								<tr>
+									<td>My name in arabic is "علي محمد علي آل براك".</td>
+									<td class="dir">My name in arabic is "علي محمد علي آل براك".</td>
+								</tr>
+								<tr>
+									<td>أول برنامج لي هو "Hello World!" وكان رائعا.</td>
+									<td class="dir">أول برنامج لي هو "Hello World!" وكان رائعا.</td>
+								</tr>
+							</tbody>
+						</table>
+						<h3>طريقة الإستخدام</h3>
+						<p>قبل وسم إغلاق جسم وثيقة HTML أضف كود تضمين الملف.</p>
+						<pre><code>        &lt;script src="direction.js"&gt;&lt;/script&gt;
+    &lt;/body&gt;</code></pre>
+						<p>وبعده ضع كود JavaScrip التالي مع تغيير className للاسم الذي تريده.</p>
+						<pre><code>    Direction.js( 'className' );</code></pre>
+						<p>ثم أضف لكل وسم HTML تريد إصلاحه الصنف "class" الذي وضعته مكان className</p>
+						<p>ثم أبلغ عن <a href="https://github.com/alaa13212/direction.js/issues">الأاخطاء</a> التي تراها في الملف</p>
+					</article>
+				</div>
+			</div>
+			<footer>
+				<div class="owner">
+					<p>
+						<a href="https://github.com/alaa13212" class="avatar"><img src="https://secure.gravatar.com/avatar/80ba9785a5b84d945b01b96509cdf51f?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a><a href="https://github.com/alaa13212">alaa13212</a> مخزن <a href="https://github.com/alaa13212/direction.js">Direction.js</a>
+					</p>
+				</div>
+				<div class="creds">
+					<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a>
+						<br/>
+						theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
+				</div>
+			</footer>
+		</div>
+		<div class="current-section">
+			<a href="#top">Scroll to top</a>
+			<a href="https://github.com/alaa13212/direction.js/tarball/master" class="tar">tar</a><a href="https://github.com/alaa13212/direction.js/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+			<p class="name"></p>
+		</div>
+	</body>
 </html>
