--- a/index.html
+++ b/index.html
@@ -117,5 +117,9 @@ http://github.com/jonrohan -->
 			<a href="https://github.com/alaa13212/direction.js/tarball/master" class="tar">tar</a><a href="https://github.com/alaa13212/direction.js/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
 			<p class="name"></p>
 		</div>
+		<script src="javascripts/direction.js"></script>
+		<script>
+			Direction.js('dir');
+		</script>
 	</body>
 </html>
