--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=1024" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<title>عرض تقديمي</title>
+		<title>Direction.js</title>
 
 		<meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
 		<meta name="author" content="Bartek Szopka" />
