--- a/API.html
+++ b/API.html
@@ -33,8 +33,8 @@
 				<h1>API<sup>beta</sup></h1>
 			</div>
 			<div id="s1" class="step slide" data-x="510" data-y="-400">
-				<q>تعديل محذاة نص</q>
-				<textarea id="textarea" style="font-size: 1em" rows="8" cols="40"></textarea>
+				<q>تعديل محاذاة نص</q>
+				<textarea id="textarea" style="font-size: 1em" rows="8" cols="40">لغة C++ ستخدم لـ...</textarea>
 				<button id="dodir" style="font-size: 1em">عدل</button>
 			</div>
 			<div id="s2" class="step slide" data-x="-510" data-y="-400">
